// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redis Props All the props 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "redis",
      },
      "name": "test-redis-test-c8b56c58",
      "namespace": "test",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "protocol": "TCP",
        },
      ],
      "selector": Object {
        "app": "my-app",
        "instance": "test",
        "role": "redis",
      },
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": Object {
      "labels": Object {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "redis",
      },
      "name": "test-redis-test-redis-test-sts-c82d6e34",
      "namespace": "test",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "my-app",
          "instance": "test",
          "role": "redis",
        },
      },
      "serviceName": "test-redis-test-c8b56c58",
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "app": "my-app",
            "instance": "test",
            "role": "redis",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "redis-server",
                "--appendonly",
                "yes",
              ],
              "env": Array [
                Object {
                  "name": "MASTER",
                  "value": "true",
                },
              ],
              "image": "redis:v1",
              "name": "redis",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
              "resources": Object {
                "limits": Object {
                  "cpu": "100m",
                  "memory": "250Mb",
                },
              },
              "volumeMounts": Array [
                Object {
                  "mountPath": "/redis-master-data",
                  "name": "data",
                },
              ],
            },
          ],
          "volumes": Array [
            Object {
              "emptyDir": Object {},
              "name": "data",
            },
          ],
        },
      },
    },
  },
]
`;

exports[`Redis Props Minimal required props 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "labels": Object {
        "instance": "redis-test",
        "release": "v1",
        "role": "redis",
      },
      "name": "test-redis-test-c8b56c58",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 6379,
          "protocol": "TCP",
        },
      ],
      "selector": Object {
        "instance": "redis-test",
        "role": "redis",
      },
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": Object {
      "labels": Object {
        "instance": "redis-test",
        "release": "v1",
        "role": "redis",
      },
      "name": "test-redis-test-redis-test-sts-c82d6e34",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "instance": "redis-test",
          "role": "redis",
        },
      },
      "serviceName": "test-redis-test-c8b56c58",
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "instance": "redis-test",
            "role": "redis",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "redis-server",
                "--appendonly",
                "yes",
              ],
              "env": Array [
                Object {
                  "name": "MASTER",
                  "value": "true",
                },
              ],
              "image": "redis:v1",
              "name": "redis",
              "ports": Array [
                Object {
                  "containerPort": 6379,
                },
              ],
              "resources": Object {
                "limits": Object {
                  "cpu": "100m",
                  "memory": "250Mb",
                },
              },
              "volumeMounts": Array [
                Object {
                  "mountPath": "/redis-master-data",
                  "name": "data",
                },
              ],
            },
          ],
          "volumes": Array [
            Object {
              "emptyDir": Object {},
              "name": "data",
            },
          ],
        },
      },
    },
  },
]
`;
